--- a/wally.toml
+++ b/wally.toml
@@ -1,11 +1,11 @@
 [package]
-name = "solarhorizon/rodux-hooks"
-description = "Roact hooks for Rodux"
-authors = ["SolarHorizon"]
-version = "0.3.1"
+name = "voidedblades/rodux-hooks"
+description = "Roact hooks for Rodux using react-lua"
+authors = ["voidedblades"]
+version = "0.0.1"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 license = "MIT"
 
 [dependencies]
-Roact = "roblox/roact@1.4"
+React = "jsdotlua/react@^17.1.0"
