--- a/wally.toml
+++ b/wally.toml
@@ -1,8 +1,8 @@
 [package]
-name = "voidedblades/rodux-hooks"
+name = "voidedblades/react-lua-rodux-hooks"
 description = "Roact hooks for Rodux using react-lua"
-authors = ["voidedblades"]
-version = "0.0.1"
+authors = ["SolarHorizon"]
+version = "0.4.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 license = "MIT"
